2003-04-07  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/atom.cpp :
	* kb/atom.h :
	* kb/expression.cpp :
	* kb/expression.h :
	* kb/transtab.cpp :
	* kb/transtab.h :

	  - Added replace() functions to replace instances of variables with
	    identifiers.

	* kb/kb.cpp :

	  - Added constraints in generate_nlp().

	* kb/consttab.h :
	* kb/consttab.cpp :

	  - Added get() functions.

	* kb/kb.h :
	* kb/kb.cpp :

	  - Added initial state in generate_nlp().

2003-04-04  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/kb.h :
	* kb/kb.cpp :

	  - decode_atom() is now used to generate atom list.

	  - Added decode_atom().

	  - Cleanup so some of the rules are generated mathematically.

	  - Added inertial and complementary rules.

	  - Added inheritance and transitivity rules.

	  - Now generate_nlp() generates a list of possible atoms.

	* kb/symab.h :
	* kb/symtab.cpp :

	  - Added yet another get() function to give an array of all
	    identifier matching the given type.

	* common/vlad.h :
	* common/list.cpp :

	  - Changed macro VLAD_ADT_MALLOC to include a size parameter.

	* kb/kb.cpp :
	* kb/kb.h :
	* parser/parser.y :

	  - Replaced kb::eval() function with a generate_nlp() stub.

2003-04-03  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/kb.cpp :
	* kb/kb.h :
	* parser/parser.y :

	  - Added partial eval() function.

	* kb/Makefile.in :
	* kb/sequence.h :
	* kb/sequence.cpp :

	  - New class to store transformation sequences that was previously
	    present in the querytab.

	* kb/kb.cpp :
	* kb/kb.h :
	* kb/querytab.cpp :
	* parser/parser.y :

	  - Took out querytab. Apparently, there is no reason to store
	    the queries. They can be evaluated as they are parsed.

	* common/list.cpp :
	* common/list.h :
	* common/numberlist.cpp :
	* common/numberlist.h :
	* common/stringlist.cpp :
	* common/stringlist.h :
	* kb/consttab.cpp :
	* kb/consttab.h :
	* kb/expression.cpp :
	* kb/expression.h :
	* kb/kb.cpp :
	* kb/querytab.cpp :
	* kb/querytab.h :